crates/metaxy-cli/tests/snapshots/typescript__snapshot_adjacent_tagged.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export type Message = { t: "Text"; c: string } | { t: "Binary"; c: [string, number] } | { t: "Ping" } | { t: "Data"; c: { key: string; value: string } };

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
