crates/metaxy-cli/tests/snapshots/typescript__snapshot_bigint_types.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface Stats {
  count: number;
  total_bytes: bigint;
  max_value: bigint;
  ids: bigint[];
  optional_big: bigint | null;
}

export type Procedures = {
  queries: {
    get_stats: { input: void; output: Stats };
  };
  mutations: {
  };
  streams: {
  };
};
