crates/metaxy-cli/tests/snapshots/typescript__snapshot_branded_newtypes.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export type UserId = string & { readonly __brand: "UserId" };

export interface User {
  id: number;
  name: string;
}

export type Coords = [number, number];

export type Procedures = {
  queries: {
    get_user: { input: UserId; output: User };
  };
  mutations: {
  };
  streams: {
  };
};
