crates/metaxy-cli/tests/snapshots/typescript__snapshot_complete_types.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface TimeResponse {
  timestamp: number;
  message: string;
}

export interface CreateInput {
  title: string;
  count: number;
}

export interface Item {
  id: number;
  title: string;
  tags: string[];
}

export type Procedures = {
  queries: {
    hello: { input: string; output: string };
    time: { input: void; output: TimeResponse };
  };
  mutations: {
    create_item: { input: CreateInput; output: Item };
  };
  streams: {
  };
};
