crates/metaxy-cli/tests/snapshots/typescript__snapshot_enum_unit.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export type Status = "Active" | "Inactive" | "Banned";

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
