crates/metaxy-cli/tests/snapshots/typescript__snapshot_flatten.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export type Full = { id: number } & Metadata;

export type Merged = A & B;

export type Event = { Click: { x: number } & Meta };

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
