crates/metaxy-cli/tests/snapshots/typescript__snapshot_generic_struct.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface Paginated<T> {
  items: T[];
  total: number;
  page: number;
}

export interface User {
  id: number;
  name: string;
}

export type Procedures = {
  queries: {
    list_users: { input: void; output: Paginated<User> };
  };
  mutations: {
  };
  streams: {
  };
};
