crates/metaxy-cli/tests/snapshots/typescript__snapshot_serde_rename_all.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface UserProfile {
  firstName: string;
  lastName: string;
  createdAt: number;
}

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
